--- a/index.html
+++ b/index.html
@@ -403,9 +403,7 @@
 
     <div id="foobar">
       <h1><font color="red"><b>一个中国是我国的底线</br></b></font></h1>
-      之前的群全部变成水群了，我自己建了一个( 625741657 ), 为了证明你是玩家需要回答问题。<br/>
-      <a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=4_4sFqXIkakSoH-7ClLW-5uu8eUPJovG&jump_from=webapi">点击这里一键加群</a></br>
-      <img src="qrcode.jpg" width="40%" height="40%"></br>
+      <br>闭群，不再招人</br>
       <b>2.9 由@帝国の栄光に輝い确认了撒旦的防御词缀</b></br>
       2.8 由@lixiaoyaosi确认了蛇后的削弱词缀</br>
       2.7 发现领袖与防御、削弱能同时出现，猜想撒旦有防御，蛇后有削弱。收集到一例爆发力出巴尔的案例，去除爆发力的问号。</br>
