--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title>全境征才计算器</title>
   <meta name='keywords' content='天下布魔'>
-  <meta name='description' content='咕咕咕'>
+  <meta name='description' content='3.0 煌星与千鹤的词缀开始收集了'>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
@@ -276,6 +276,8 @@
       ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出"],
       ["3☆蛇女之后 梅斯米奈雅", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱"],
       ["3☆KS-VIII 魔人偶", "暗属性", "攻击者", "领袖", "爆发力", "输出", "中体型"],
+      ["3☆煌星 妲斯艾菲娜(收集中)", "暗属性", "辅助者", "领袖", "人类", "中体型(?)", "小体型(?)", "贫乳", "支援(?)"],
+      ["3☆复生公主 千鹤(收集中)", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
 
       ["2☆魔管家 艾可", "菁英", "暗属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
@@ -402,8 +404,8 @@
     </table>
 
     <div id="foobar">
-      <h1><font color="red"><b>一个中国是我国的底线</br></b></font></h1>
-      <b>2.9 由@帝国の栄光に輝い确认了撒旦的防御词缀</b></br>
+      <h1><b>3.0 煌星与千鹤的词缀开始收集了，小心歪新卡，当然如果真歪了记得汇报</b></br></h1>
+      2.9 由@帝国の栄光に輝い确认了撒旦的防御词缀</br>
       2.8 由@lixiaoyaosi确认了蛇后的削弱词缀</br>
       2.7 发现领袖与防御、削弱能同时出现，猜想撒旦有防御，蛇后有削弱。收集到一例爆发力出巴尔的案例，去除爆发力的问号。</br>
       2.6 新增了查询指定角色必出词缀的功能，只需要在结果表格里点击对应角色就可以查看。对于2词必出角色，会显示很多重复的3词，注意自行筛选。该功能不会将“菁英”词缀考虑在内</br>
