--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出"],
       ["3☆蛇女之后 梅斯米奈雅", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱"],
       ["3☆KS-VIII 魔人偶", "暗属性", "攻击者", "领袖", "爆发力", "输出", "中体型"],
-      ["3☆煌星 妲斯艾菲娜(收集中)", "暗属性", "辅助者", "领袖", "人类", "中体型(?)", "小体型(?)", "贫乳", "支援(?)"],
+      ["3☆煌星 妲斯艾菲娜(收集中)", "暗属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援(?)"],
       ["3☆复生公主 千鹤(收集中)", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
 
       ["2☆魔管家 艾可", "菁英", "暗属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
@@ -404,7 +404,9 @@
     </table>
 
     <div id="foobar">
+      <h1>网站经常抽风，可以考虑使用  <a href="https://xiaorrr.gitee.io/tenkafuma/">https://xiaorrr.gitee.io/tenkafuma/</a> </h1>
       <h1><b>3.0 煌星与千鹤的词缀开始收集了，小心歪新卡，当然如果真歪了记得汇报</b></br></h1>
+      由qq631039568确认了煌星的中体型词缀</br>
       2.9 由@帝国の栄光に輝い确认了撒旦的防御词缀</br>
       2.8 由@lixiaoyaosi确认了蛇后的削弱词缀</br>
       2.7 发现领袖与防御、削弱能同时出现，猜想撒旦有防御，蛇后有削弱。收集到一例爆发力出巴尔的案例，去除爆发力的问号。</br>
