--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     </table>
 
     <div id="foobar">
-      <h1>网站经常抽风，可以考虑使用  <a href="https://xiaorrr.gitee.io/tenkafuma/">https://xiaorrr.gitee.io/tenkafuma/</a> </h1>
+      <h1>国内网站被封掉了，现在只剩这个了😭 </h1>
       <h1><b>3.0 煌星与千鹤的词缀开始收集了，小心歪新卡，当然如果真歪了记得汇报</b></br></h1>
       由qq631039568确认了煌星的中体型词缀</br>
       2.9 由@帝国の栄光に輝い确认了撒旦的防御词缀</br>
