--- a/index.html
+++ b/index.html
@@ -437,8 +437,7 @@
       <br/>
       2.3：根据贴吧反馈移除了巴尔的爆发词缀。游戏更新为小史莱姆添加了回复词缀，刷女王变难了</br>
       2.2：添加了史莱姆女王的数据。以及其他新角色的不完整数据</br>
-      发现国内地址还能用，可以尝试去用： <a href="https://xiaorrr.gitee.io/tenkafuma/">https://xiaorrr.gitee.io/tenkafuma/</a></br>
-      最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki</a>
+      最好的游戏攻略 公益类初始号 代充 尽在<a href="http://tenkafuma.gamekee.com/">天下布魔中文维基wiki(已倒闭)</a>
     </div>
     <div id="gitalk-container"></div>
     <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
