--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title>全境征才计算器</title>
   <meta name='keywords' content='天下布魔'>
-  <meta name='description' content='3.0 煌星与千鹤的词缀开始收集了'>
+  <meta name='description' content='3.1 煌星词条收集完毕'>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
@@ -276,7 +276,7 @@
       ["3☆魔王 伊布力斯", "领袖", "光属性", "魔族", "中体型", "攻击者", "生存力", "输出"],
       ["3☆蛇女之后 梅斯米奈雅", "领袖", "火属性", "妨碍者", "爆发力", "贫乳", "魔族", "干扰(?)", "削弱"],
       ["3☆KS-VIII 魔人偶", "暗属性", "攻击者", "领袖", "爆发力", "输出", "中体型"],
-      ["3☆煌星 妲斯艾菲娜(收集中)", "暗属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援(?)"],
+      ["3☆煌星 妲斯艾菲娜", "暗属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援"],
       ["3☆复生公主 千鹤(收集中)", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
 
       ["2☆魔管家 艾可", "菁英", "暗属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
@@ -348,7 +348,7 @@
 
 <body style="background:#F8F8FF" id="body">
   <div id="center_box">
-    <h1 style="display: inline;">全境征才计算器 Ver2.9 by 小r</h1><small>邀请码 USHL2U</small></br>
+    <h1 style="display: inline;">全境征才计算器 Ver3.1 by 小r</h1><small>邀请码 USHL2U</small></br>
 
     <button type="button" class='btn_normal btn'>攻击者</button>
     <button type="button" class='btn_normal btn'>守护者</button>
@@ -404,8 +404,9 @@
     </table>
 
     <div id="foobar">
-      <h1>国内网站被封掉了，现在只剩这个了😭 </h1>
-      <h1><b>3.0 煌星与千鹤的词缀开始收集了，小心歪新卡，当然如果真歪了记得汇报</b></br></h1>
+      <h1>国内网站被封掉了，现在只剩这个了😭 对于无法访问的该网站的人，离线版已经发布了，贴吧攻略区可以找到</h1>
+      3.1 gszsd和夜无月汇报了煌星的支援词条</br>
+      3.0 煌星与千鹤的词缀开始收集了，小心歪新卡，当然如果真歪了记得汇报</br>
       由qq631039568确认了煌星的中体型词缀</br>
       2.9 由@帝国の栄光に輝い确认了撒旦的防御词缀</br>
       2.8 由@lixiaoyaosi确认了蛇后的削弱词缀</br>
