--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       ["0☆魔族战士 芙蕾", "光属性", "守护者", "魔族", "美乳", "中体型", "保护", "士兵", "防御"],
       ["0☆圣光骑士 玛蒂娜", "光属性", "守护者", "人类", "美乳", "中体型", "保护", "生存力", "防御", "士兵"],
       ["0☆双蛇军团士兵 夏琳", "火属性", "守护者", "人类", "美乳", "中体型", "防御", "群体攻击", "保护", "士兵"],
-      ["0☆烈日国巫女 枫", "风属性", "治疗者", "人类", "美乳", "中体型", "回复", "越战越强", "士兵"],
+      ["0☆烈日国巫女 枫", "风属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
       ["0☆主神教团僧兵 克蕾雅", "光属性", "治疗者", "人类", "美乳", "中体型", "回复", "士兵"],
       ["0☆试做机三号", "光属性", "攻击者", "小体型", "士兵", "美乳", "输出", "生存力"],
       ["0☆法斯菁英近卫 安娜", "火属性", "守护者", "人类", "中体型", "防御", "士兵", "保护", "美乳"],
@@ -348,7 +348,7 @@
 
 <body style="background:#F8F8FF" id="body">
   <div id="center_box">
-    <h1 style="display: inline;">全境征才计算器 Ver3.1 by 小r</h1><small>邀请码 USHL2U</small></br>
+    <h1 style="display: inline;">全境征才计算器 Ver3.2 by 小r</h1><small>邀请码 USHL2U</small></br>
 
     <button type="button" class='btn_normal btn'>攻击者</button>
     <button type="button" class='btn_normal btn'>守护者</button>
@@ -404,7 +404,8 @@
     </table>
 
     <div id="foobar">
-      <h1>国内网站被封掉了，现在只剩这个了😭 对于无法访问的该网站的人，离线版已经发布了，贴吧攻略区可以找到</h1>
+      <h1>对于无法翻墙的玩家 提供了一个国内地址，需要的记得保存 <a href="http://47.99.93.37/"></h1>
+      3.2 由喵汇报 为剑圣添加了美乳-越战越强词条
       3.1 gszsd和夜无月汇报了煌星的支援词条</br>
       3.0 煌星与千鹤的词缀开始收集了，小心歪新卡，当然如果真歪了记得汇报</br>
       由qq631039568确认了煌星的中体型词缀</br>
