--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     </table>
 
     <div id="foobar">
-      <h1>对于无法翻墙的玩家 提供了一个国内地址，需要的记得保存 <a href="http://47.99.93.37/"></h1>
+      <h1>对于无法翻墙的玩家 提供了一个国内地址，需要的记得保存 <a href="http://47.99.93.37/">http://47.99.93.37/</a></h1>
       3.2 由喵汇报 为剑圣添加了美乳-越战越强词条</br>
       3.1 gszsd和夜无月汇报了煌星的支援词条</br>
       3.0 煌星与千鹤的词缀开始收集了，小心歪新卡，当然如果真歪了记得汇报</br>
