先删了水守护

--- a/index.html
+++ b/index.html
@@ -92,14 +92,16 @@
   <script type="text/javascript">
     var tags = [];
     var ans = [];
+    var propheticWords = [];
     window.onload = function () {
       // 调整屏幕宽度
       getDevice()
+      initPropheticWords() //初始化词条预言系统
       var arr = document.getElementsByClassName('btn_normal btn');
       for (var i = 0; i < arr.length; i++) {
         arr[i].className = 'btn_normal btn';
         arr[i].onclick = function () {
-          if (this.className == 'btn_normal btn') {
+          if (this.className == 'btn_normal btn' || this.className == 'btn_hint btn') {
             this.className = 'btn_clicked btn';
             // tags.push(this.innerHTML);
           } else {
@@ -110,8 +112,20 @@
       }
     }
 
+    function initPropheticWords() {
+      propheticWords = propheticWords.map(w => w.split(','));
+    }
+
+    //预言系统 基于交互设计理念 为用户自动补全
+    function propheticWord() {
+      if(tags.length <= 4) {
+        propheticWords.forEach().filter(words => words.isContain())
+      }
+    }
+
     function searchAndShow() {
       collectSelectedTags();
+      propheticWord();
       ans = [];
       searchChara([], 0);
       sortAns();
@@ -323,7 +337,7 @@
       ["0☆法斯菁英近卫 安娜", "火属性", "守护者", "人类", "中体型", "防御", "士兵", "保护", "美乳"],
       ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"],
       ["0☆法斯精锐骑士 布兰", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
-      ["0☆惩戒天使", "水属性", "守护者", "士兵", "亚人"],
+      ["0☆惩戒天使", "水属性", "守护（这个词我先删了）", "士兵", "亚人"],
       ["0☆福音天使", "水属性", "治疗者", "士兵", "亚人"],
     ]
 
@@ -342,6 +356,111 @@
       };
       return result;
     }
+
+var propheticWords = ["中体型,亚人,削弱,回击,领袖",
+"中体型,回复,输出,妨碍者,美乳",
+"中体型,小体型,美乳,火属性,守护者",
+"中体型,暗属性,回复,守护者,光属性",
+"中体型,水属性,治疗者,攻击者,亚人",
+"中体型,风属性,士兵,亚人,防御",
+"亚人,攻击者,风属性,生存力,保护",
+"亚人,美乳,攻击者,小体型,中体型",
+"人类,回复,治疗者,小体型,攻击者",
+"人类,守护者,巨乳,保护,攻击者",
+"人类,守护者,生存力,干扰,群体攻击",
+"人类,守护者,领袖,水属性,贫乳",
+"人类,巨乳,群体攻击,防御,输出",
+"人类,攻击者,群体攻击,输出,风属性",
+"人类,治疗者,越战越强,群体攻击,干扰",
+"人类,爆发力,群体攻击,保护,小体型",
+"人类,群体攻击,生存力,治疗者,亚人",
+"保护,攻击者,输出,光属性,暗属性",
+"保护,暗属性,越战越强,贫乳,守护者",
+"光属性,保护,暗属性,贫乳,防御",
+"光属性,攻击者,贫乳,士兵,小体型",
+"削弱,妨碍者,暗属性,人类,生存力",
+"削弱,巨乳,亚人,魔族,回复",
+"回击,支援,辅助者,领袖,光属性",
+"回复,中体型,人类,贫乳,守护者",
+"回复,亚人,暗属性,美乳,风属性",
+"回复,巨乳,人类,输出,干扰",
+"回复,干扰,小体型,水属性,群体攻击",
+"回复,攻击者,治疗者,贫乳,中体型",
+"回复,攻击者,魔族,群体攻击,治疗者",
+"回复,魔族,亚人,小体型,水属性",
+"士兵,削弱,保护,输出,贫乳",
+"士兵,妨碍者,削弱,魔族,守护者",
+"士兵,干扰,人类,群体攻击,回复",
+"妨碍者,干扰,巨乳,士兵,治疗者",
+"妨碍者,攻击者,魔族,输出,贫乳",
+"守护者,妨碍者,魔族,贫乳,攻击者",
+"守护者,攻击者,中体型,生存力,风属性",
+"守护者,治疗者,风属性,群体攻击,巨乳",
+"小体型,回复,防御,妨碍者,火属性",
+"巨乳,光属性,士兵,暗属性,越战越强",
+"巨乳,守护者,小体型,输出,攻击者",
+"巨乳,干扰,魔族,贫乳,群体攻击",
+"干扰,光属性,治疗者,生存力,暗属性",
+"干扰,妨碍者,支援,小体型,守护者",
+"干扰,巨乳,暗属性,风属性,群体攻击",
+"支援,治疗者,妨碍者,小体型,辅助者",
+"攻击者,保护,爆发力,小体型,输出",
+"攻击者,干扰,守护者,防御,光属性",
+"攻击者,生存力,越战越强,守护者,小体型",
+"攻击者,防御,治疗者,群体攻击,输出",
+"攻击者,魔族,人类,中体型,干扰",
+"暗属性,回复,输出,中体型,妨碍者",
+"暗属性,攻击者,保护,光属性,士兵",
+"暗属性,水属性,妨碍者,生存力,输出",
+"暗属性,火属性,削弱,支援,魔族",
+"暗属性,生存力,保护,妨碍者,小体型",
+"暗属性,生存力,水属性,输出,风属性",
+"暗属性,美乳,回复,魔族,贫乳",
+"暗属性,美乳,小体型,防御,贫乳",
+"暗属性,贫乳,保护,魔族,治疗者",
+"水属性,回复,治疗者,贫乳,光属性",
+"火属性,保护,守护者,士兵,生存力",
+"火属性,群体攻击,小体型,魔族,防御",
+"火属性,贫乳,输出,干扰,光属性",
+"爆发力,暗属性,群体攻击,妨碍者,人类",
+"生存力,亚人,守护者,治疗者,削弱",
+"生存力,人类,魔族,妨碍者,水属性",
+"生存力,守护者,防御,攻击者,风属性",
+"生存力,小体型,治疗者,风属性,输出",
+"生存力,水属性,巨乳,魔族,回复",
+"生存力,贫乳,小体型,输出,魔族",
+"美乳,人类,中体型,水属性,魔族",
+"美乳,治疗者,防御,水属性,爆发力",
+"群体攻击,中体型,暗属性,巨乳,保护",
+"群体攻击,攻击者,输出,暗属性,水属性",
+"群体攻击,魔族,暗属性,光属性,治疗者",
+"菁英,光属性,回复,人类,治疗者",
+"贫乳,中体型,防御,美乳,小体型",
+"贫乳,人类,干扰,魔族,水属性",
+"贫乳,士兵,巨乳,光属性,暗属性",
+"贫乳,攻击者,守护者,治疗者,火属性",
+"贫乳,攻击者,生存力,美乳,输出",
+"贫乳,水属性,攻击者,光属性,亚人",
+"贫乳,治疗者,干扰,美乳,防御",
+"越战越强,人类,亚人,贫乳,士兵",
+"越战越强,防御,守护者,风属性,水属性",
+"辅助者,妨碍者,防御,攻击者,水属性",
+"输出,保护,守护者,治疗者,群体攻击",
+"输出,妨碍者,治疗者,回复,风属性",
+"输出,干扰,魔族,风属性,美乳",
+"输出,爆发力,守护者,火属性,暗属性",
+"防御,亚人,火属性,守护者,输出",
+"防御,守护者,人类,攻击者,火属性",
+"防御,干扰,魔族,风属性,暗属性",
+"防御,群体攻击,守护者,回复,风属性",
+"领袖,爆发力,亚人,回复,治疗者",
+"风属性,回复,水属性,攻击者,越战越强",
+"风属性,暗属性,守护者,治疗者,火属性",
+"魔族,中体型,小体型,水属性,输出",
+"魔族,亚人,风属性,守护者,生存力",
+"魔族,人类,输出,妨碍者,中体型",
+"魔族,保护,暗属性,火属性,美乳",
+"魔族,妨碍者,水属性,攻击者,生存力"];
   </script>
 
 <body style="background:rgb(230, 230, 255)" id="body">
