--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     //预言系统 基于交互设计理念 为用户自动补全
     function propheticWord() {
       if(tags.length <= 4) {
-        propheticWords.forEach().filter(words => words.isContain())
+        //propheticWords.forEach().filter(words => words.isContain())
       }
     }
 
