添加守护者

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       ["0☆法斯菁英近卫 安娜", "火属性", "守护者", "人类", "中体型", "防御", "士兵", "保护", "美乳"],
       ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"],
       ["0☆法斯精锐骑士 布兰", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
-      ["0☆惩戒天使", "水属性", "守护（这个词我先删了）", "士兵", "亚人"],
+      ["0☆惩戒天使", "水属性", "守护者", "士兵", "亚人"],
       ["0☆福音天使", "水属性", "治疗者", "士兵", "亚人"],
     ]
 
