添加收集中

--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
       ["3☆煌星 妲斯艾菲娜", "暗属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援"],
       ["3☆复生公主 千鹤", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
       ["3☆天使长 圣米勒", "光属性", "攻击者" , "领袖", "输出(?)", "爆发力(?)"],
-      ["3☆千年血族 洛缇亚", "暗属性", "攻击者", "亚人(?)", "领袖", "回复(?)", "巨乳(?)", "输出(?)", "爆发力(?)", "生存力(?)"],
-      ["3☆食梦 阿尔蒂雅", "暗属性", "妨碍者", "亚人(?)", "领袖", "贫乳(?)", "爆发力(?)", "干扰(?)", "削弱(?)", "支援(?)"],
+      ["3☆千年血族 洛缇亚(收集中)", "暗属性", "攻击者", "亚人(?)", "领袖", "回复(?)", "巨乳(?)", "输出(?)", "爆发力(?)", "生存力(?)"],
+      ["3☆食梦 阿尔蒂雅(收集中)", "暗属性", "妨碍者", "亚人(?)", "领袖", "贫乳(?)", "爆发力(?)", "干扰(?)", "削弱(?)", "支援(?)"],
 
       ["2☆魔管家 艾可", "菁英", "暗属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
@@ -371,7 +371,7 @@
       ["2☆大将军 朱诺安", "菁英", "暗属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
       ["2☆天才女军师 布兰妮", "菁英", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发力", "支援"],
       ["2☆史莱姆女王 娜芙拉拉", "菁英", "风属性", "魔族", "守护者", "巨乳", "中体型", "保护", "防御", "生存力", "回复"],
-      ["2☆魔法少女 托特拉" , "菁英", "光属性", "攻击者", "人类", "爆发力(?)", "美乳(?)", "削弱(?)", "越战越强(?)", "输出(?)"],
+      ["2☆魔法少女 托特拉(收集中)" , "菁英", "光属性", "攻击者", "人类", "爆发力(?)", "美乳(?)", "削弱(?)", "越战越强(?)", "输出(?)"],
 
       ["1☆流浪魔法师 尤依", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
@@ -401,8 +401,8 @@
       ["0☆法斯菁英近卫 安娜", "火属性", "守护者", "人类", "中体型", "防御", "士兵", "保护", "美乳"],
       ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"],
       ["0☆法斯精锐骑士 布兰", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
-      ["0☆惩戒天使", "水属性", "守护者", "士兵", "亚人"],
-      ["0☆福音天使", "水属性", "治疗者", "士兵", "亚人"],
+      ["0☆惩戒天使(收集中)", "水属性", "守护者", "士兵", "亚人"],
+      ["0☆福音天使(收集中)", "水属性", "治疗者", "士兵", "亚人"],
     ]
 
     function getDevice() {
