添加2组自动补全

--- a/index.html
+++ b/index.html
@@ -524,7 +524,9 @@ var propheticWords = ["中体型,亚人,削弱,回击,领袖",
 "魔族,亚人,风属性,守护者,生存力",
 "魔族,人类,输出,妨碍者,中体型",
 "魔族,保护,暗属性,火属性,美乳",
-"魔族,妨碍者,水属性,攻击者,生存力"];
+"魔族,妨碍者,水属性,攻击者,生存力",
+"领袖,攻击者,爆发力,暗属性,治疗者",
+"巨乳,中体型,攻击者,人类,保护"];
   </script>
 
 <body style="background:rgb(230, 230, 255)" id="body">
