添加一组新词条

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ var propheticWords = ["中体型,亚人,削弱,回击,领袖",
 "防御,守护者,人类,攻击者,火属性",
 "防御,干扰,魔族,风属性,暗属性",
 "防御,群体攻击,守护者,回复,风属性",
-"领袖,爆发力,亚人,回复,治疗者",
+"领袖,爆发力,亚人,回复,治疗者",   //新的
 "风属性,回复,水属性,攻击者,越战越强",
 "风属性,暗属性,守护者,治疗者,火属性",
 "魔族,中体型,小体型,水属性,输出",
@@ -526,7 +526,8 @@ var propheticWords = ["中体型,亚人,削弱,回击,领袖",
 "魔族,保护,暗属性,火属性,美乳",
 "魔族,妨碍者,水属性,攻击者,生存力",
 "领袖,攻击者,爆发力,暗属性,治疗者",
-"巨乳,中体型,攻击者,人类,保护"];
+"巨乳,中体型,攻击者,人类,保护",
+"人类,菁英,水属性,亚人,群体攻击"];  //新的
   </script>
 
 <body style="background:rgb(230, 230, 255)" id="body">
