--- a/index.html
+++ b/index.html
@@ -527,7 +527,9 @@ var propheticWords = ["中体型,亚人,削弱,回击,领袖",
 "魔族,妨碍者,水属性,攻击者,生存力",
 "领袖,攻击者,爆发力,暗属性,治疗者",
 "巨乳,中体型,攻击者,人类,保护",
-"人类,菁英,水属性,亚人,群体攻击"];  //新的
+"人类,菁英,水属性,亚人,群体攻击",  //下面都是新的
+"守护者,爆发力,小体型,中体型,攻击者",
+"干扰,小体型,风属性,爆发力,越战越强"];
   </script>
 
 <body style="background:rgb(230, 230, 255)" id="body">
