删除越战越强

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
       ["2☆大将军 朱诺安", "菁英", "暗属性", "人类", "攻击者", "巨乳", "中体型", "输出", "支援"],
       ["2☆天才女军师 布兰妮", "菁英", "光属性", "人类", "妨碍者", "美乳", "中体型", "群体攻击", "削弱", "爆发力", "支援"],
       ["2☆史莱姆女王 娜芙拉拉", "菁英", "风属性", "魔族", "守护者", "巨乳", "中体型", "保护", "防御", "生存力", "回复"],
-      ["2☆魔法少女 托特拉(收集中)" , "菁英", "光属性", "攻击者", "人类", "爆发力(?)", "美乳", "削弱", "越战越强(?)", "输出"],
+      ["2☆魔法少女 托特拉(收集中)" , "菁英", "光属性", "攻击者", "人类", "爆发力(?)", "美乳", "削弱", "输出"],
 
       ["1☆流浪魔法师 尤依", "火属性", "攻击者", "人类", "巨乳", "小体型", "越战越强", "输出"],
       ["1☆龙女 伊维斯", "火属性", "攻击者", "亚人", "贫乳", "小体型", "越战越强", "群体攻击", "输出"],
@@ -602,7 +602,7 @@ var propheticWords = ["中体型,亚人,削弱,回击,领袖",
       食梦：亚人 削弱<br/>
       大天使：支援<br/>
       血族：爆发力<br/>
-      托特拉：美乳 削弱 输出  爆发力和越战越强被划掉了2次<br/>
+      托特拉：美乳 削弱 输出  爆发力划掉了2次 越战越强划掉了3次 已经删除越战越强<br/>
       惩戒天使：没有防御<br/>
       <h1>3.3 新角色会在29日后加入，以下内容较为重要</br></h1>
       (1) 所有角色词条都是玩家猜出来的，更新初期，词条全部未知，试验词条有成本，请自愿参加或等待。</br>
