--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
       ["3☆煌星 妲斯艾菲娜", "暗属性", "辅助者", "领袖", "人类", "中体型", "贫乳", "支援"],
       ["3☆复生公主 千鹤", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
       ["3☆天使长 圣米勒", "光属性", "攻击者" , "领袖", "亚人(?)", "支援", "输出(?)", "爆发力(?)"],
-      ["3☆千年血族 洛缇亚(收集中)", "暗属性", "攻击者", "亚人(?)", "领袖", "回复(?)", "巨乳(?)", "输出(?)", "爆发力", "生存力(?)"],
-      ["3☆食梦 阿尔蒂雅(收集中)", "暗属性", "妨碍者", "亚人", "领袖", "贫乳(?)", "爆发力(?)", "干扰(?)", "削弱", "支援(?)"],
+      ["3☆千年血族 洛缇亚(收集中)", "暗属性", "攻击者", "魔族", "领袖", "回复(?)", "巨乳(?)", "输出(?)", "爆发力", "生存力(?)"],
+      ["3☆食梦 阿尔蒂雅(收集中)", "暗属性", "妨碍者", "亚人", "领袖", "贫乳(?)", "干扰(?)", "削弱", "支援(?)"],
 
       ["2☆魔管家 艾可", "菁英", "暗属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
@@ -599,9 +599,9 @@ var propheticWords = ["中体型,亚人,削弱,回击,领袖",
     <div id="foobar">
       <h1>3.5 计算器词缀更新中</h1>
       已确定：<br/>
-      食梦：亚人 削弱<br/>
+      食梦：亚人 削弱  爆发力划掉后出了一个，大概率没有爆发力，先去掉了<br/>
       大天使：支援<br/>
-      血族：爆发力<br/>
+      血族：爆发力 魔族<br/>
       托特拉：美乳 削弱 输出  爆发力划掉了2次 越战越强划掉了3次 已经删除越战越强<br/>
       惩戒天使：没有防御<br/>
       <h1>3.3 新角色会在29日后加入，以下内容较为重要</br></h1>
