--- a/index.html
+++ b/index.html
@@ -536,6 +536,9 @@ var propheticWords = ["中体型,亚人,削弱,回击,领袖",
 "巨乳,中体型,攻击者,人类,保护",
 "人类,菁英,水属性,亚人,群体攻击",  //下面都是新的
 "守护者,爆发力,小体型,中体型,攻击者",
+"中体型,群体攻击,输出,贫乳,越战越强",
+"美乳,暗属性,群体攻击,贫乳,妨碍者",
+"干扰,攻击者,群体攻击,越战越强,守护者",
 "干扰,小体型,风属性,爆发力,越战越强"];
   </script>
 
@@ -597,6 +600,8 @@ var propheticWords = ["中体型,亚人,削弱,回击,领袖",
     </table>
 
     <div id="foobar">
+      <font color="red"></color><h1>新版领袖是橙色的，记得选中！！！拉满9小时！！！</h1></font>
+      我已经收到3起没选领袖的惨案了</br>
       <h1>3.5 计算器词缀更新中</h1>
       已确定：<br/>
       食梦：亚人 削弱  爆发力划掉后出了一个，大概率没有爆发力，先去掉了<br/>
