惩戒天使-生存力amend

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
       ["3☆复生公主 千鹤", "风属性", "攻击者", "领袖", "爆发力", "输出", "中体型(?)", "魔族"],
       ["3☆天使长 圣米勒", "光属性", "攻击者" , "领袖", "亚人(?)", "支援", "输出(?)", "爆发力(?)"],
       ["3☆千年血族 洛缇亚(收集中)", "暗属性", "攻击者", "魔族", "领袖", "回复(?)", "巨乳(?)", "输出(?)", "爆发力", "生存力(?)"],
-      ["3☆食梦 阿尔蒂雅(收集中)", "暗属性", "妨碍者", "亚人", "领袖", "贫乳(?)", "干扰(?)", "削弱", "支援(?)"],
+      ["3☆食梦 阿尔蒂雅(收集中)", "暗属性", "妨碍者", "亚人", "领袖", "贫乳", "干扰(?)", "削弱", "支援(?)"],
 
       ["2☆魔管家 艾可", "菁英", "暗属性", "魔族", "辅助者", "中体型", "美乳", "支援"],
       ["2☆圣骑士长 雷欧娜", "菁英", "水属性", "人类", "守护者", "美乳", "中体型", "生存力", "保护", "防御"],
@@ -408,7 +408,7 @@
       ["0☆法斯菁英近卫 安娜", "火属性", "守护者", "人类", "中体型", "防御", "士兵", "保护", "美乳"],
       ["0☆法斯高阶法师 诺诺可", "水属性", "攻击者", "人类", "中体型", "美乳", "输出", "士兵", "爆发力"],
       ["0☆法斯精锐骑士 布兰", "风属性", "攻击者", "人类", "中体型", "美乳", "输出", "防御", "士兵"],
-      ["0☆惩戒天使(收集中)", "水属性", "守护者", "士兵", "亚人(?)"],
+      ["0☆惩戒天使(收集中)", "水属性", "守护者", "士兵", "亚人(?)","生存力"],
       ["0☆福音天使(收集中)", "水属性", "治疗者", "士兵", "亚人(?)"],
     ]
 
@@ -606,11 +606,11 @@ var propheticWords = ["中体型,亚人,削弱,回击,领袖",
       我已经收到3起没选领袖的惨案了</br>
       <h1>3.5 计算器词缀更新中</h1>
       已确定：<br/>
-      食梦：亚人 削弱  爆发力划掉后出了一个，大概率没有爆发力，先去掉了<br/>
+      食梦：亚人 削弱 贫乳 爆发力划掉后出了一个，大概率没有爆发力，先去掉了<br/>
       大天使：支援<br/>
       血族：爆发力 魔族<br/>
       托特拉：美乳 削弱 输出  爆发力划掉了2次 越战越强划掉了3次 已经删除越战越强  美乳+爆发力出货1次(概率很低)，先加上爆发力后续再验证<br/>
-      惩戒天使：没有防御<br/>
+      惩戒天使：生存力 没有防御 没有保护<br/>
       <b></b>
       <h1>3.3 新角色会在29日后加入，以下内容较为重要</br></h1>
       (1) 所有角色词条都是玩家猜出来的，更新初期，词条全部未知，试验词条有成本，请自愿参加或等待。</br>
