--- a/index.html
+++ b/index.html
@@ -539,7 +539,8 @@ var propheticWords = ["中体型,亚人,削弱,回击,领袖",
 "中体型,群体攻击,输出,贫乳,越战越强",
 "美乳,暗属性,群体攻击,贫乳,妨碍者",
 "干扰,攻击者,群体攻击,越战越强,守护者",
-"干扰,小体型,风属性,爆发力,越战越强"];
+"干扰,小体型,风属性,爆发力,越战越强",
+"保护,菁英,群体攻击,防御,风属性"];
 
 ////<body style="background:rgb(216, 243, 215)" id="body">
   </script>
