--- a/index.html
+++ b/index.html
@@ -599,7 +599,8 @@ var propheticWords = ["中体型,亚人,削弱,回击,领袖",
 "保护,菁英,群体攻击,防御,风属性",
 "回复,攻击者,魔族,群体攻击,治疗者",
 "保护,小体型,回复,守护者,亚人",
-"输出,群体攻击,巨乳,辅助者,美乳"];
+"输出,群体攻击,巨乳,辅助者,美乳",
+"火属性,巨乳,越战越强,生存力,群体攻击"];
 
 //<body style="background:rgb(221, 241, 220)" id="body">
 
